--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
-  <link href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
   
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -15,10 +15,11 @@
   
 </head>
 <body>
-  <h2>Hello Krauser</h2>
-  <div id="cont" class="container">
-    
-  </div>
+  <h2>Hello Fracc</h2>
+  
+  <div id="cont1" class="cont"></div>
+  <div id="cont2" class="cont"></div>
+
   <script src="js/main.js"></script>
 </body>
 </html>
